added validations added backlog config

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,14 @@ build/
 
 *.db
 db/*
+
+HELP.md
+target
+/
+!.mvn/wrapper/maven-wrapper.jar
+
+!**/src/main/
+**/target/
+
+!**/src/test/
+**/target/
