--- a/.gitignore
+++ b/.gitignore
@@ -46,12 +46,9 @@ build/
 db/*
 
 HELP.md
-target
-/
-!.mvn/wrapper/maven-wrapper.jar
-
-!**/src/main/
-**/target/
 
 !**/src/test/
 **/target/
+.mvn/wrapper
+mvnw
+mvnw.cmd
