--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
 	<artifactId>filmorate</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>filmorate</name>
-	<description>YP SP9 final project (ii)</description>
+	<description>Yandex Practicum бэкенд для сервиса, работы с фильмами и оценками пользователей
+		SP9 FP: Каркас Spring Boot приложения. Обработка запросов. Вадидация DTO-классов
+	</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -30,12 +32,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-suite-commons</artifactId>
-			<version>1.9.2</version>
 		</dependency>
 
 		<dependency>
@@ -60,12 +56,6 @@
 			<artifactId>annotations</artifactId>
 			<version>RELEASE</version>
 			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate.validator</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>6.2.5.Final</version>
 		</dependency>
 
 	</dependencies>
